// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderJS matches previous snapshot 1`] = `
"export var shadow = "var(--shadow-css, grey)";
export var buttonShadow = "var(--buttonShadow-css, grey)";
export var boxShadow = "var(--boxShadow-css, grey)";
export var lineShadow = "var(--lineShadow-css, grey)";"
`;

exports[`renderSCSS matches previous snapshot 1`] = `
"$shadow-var: var(--shadow-css, grey);
$buttonShadow-var: var(--buttonShadow-css, grey);
$boxShadow-var: var(--boxShadow-css, grey);
$lineShadow-var: var(--lineShadow-css, grey);"
`;

exports[`renderTS matches previous snapshot 1`] = `
"export const shadow: string;
export const buttonShadow: string;
export const boxShadow: string;
export const lineShadow: string;"
`;

exports[`writeJSONfiles > generates the right content > basic example 1`] = `
{
  "contexts": {
    "navigation": {
      "tokens": {
        "boxShadow-var": {
          "$value": {
            "dark": "purple",
            "light": "purple",
          },
        },
        "buttonShadow-var": {
          "$value": {
            "dark": "brown",
            "light": "black",
          },
        },
        "lineShadow-var": {
          "$value": {
            "dark": "purple",
            "light": "black",
          },
        },
        "shadow-var": {
          "$value": {
            "dark": "brown",
            "light": "black",
          },
        },
      },
    },
  },
  "tokens": {
    "boxShadow-var": {
      "$value": {
        "dark": "brown",
        "light": "grey",
      },
    },
    "buttonShadow-var": {
      "$value": {
        "dark": "black",
        "light": "grey",
      },
    },
    "lineShadow-var": {
      "$value": {
        "dark": "brown",
        "light": "grey",
      },
    },
    "shadow-var": {
      "$value": {
        "dark": "black",
        "light": "grey",
      },
    },
  },
}
`;

exports[`writeJSONfiles > generates the right content > with descriptions 1`] = `
{
  "contexts": {
    "navigation": {
      "tokens": {
        "boxShadow-var": {
          "$description": "box shadow",
          "$value": {
            "dark": "purple",
            "light": "purple",
          },
        },
        "buttonShadow-var": {
          "$description": "button shadow",
          "$value": {
            "dark": "brown",
            "light": "black",
          },
        },
        "lineShadow-var": {
          "$description": "line shadow",
          "$value": {
            "dark": "purple",
            "light": "black",
          },
        },
        "shadow-var": {
          "$description": "shadow",
          "$value": {
            "dark": "brown",
            "light": "black",
          },
        },
      },
    },
  },
  "tokens": {
    "boxShadow-var": {
      "$description": "box shadow",
      "$value": {
        "dark": "brown",
        "light": "grey",
      },
    },
    "buttonShadow-var": {
      "$description": "button shadow",
      "$value": {
        "dark": "black",
        "light": "grey",
      },
    },
    "lineShadow-var": {
      "$description": "line shadow",
      "$value": {
        "dark": "brown",
        "light": "grey",
      },
    },
    "shadow-var": {
      "$description": "shadow",
      "$value": {
        "dark": "black",
        "light": "grey",
      },
    },
  },
}
`;
